# bus-availabilities-scraper

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  Dockerfile  Leptos.toml  README.md  clippy.toml  docker-compose.yml  justfile  lefthook.yml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
agent_docs/: database_schema.md  highway_bus_api.md
app/: Cargo.toml
app/src/: api.rs  api_impl.rs  components_impl.rs  config.rs  db.rs  error.rs  html_parser.rs  lib.rs  notifier.rs  repositories.rs  scraper.rs  seed.rs  translations.rs  types.rs
app/src/components/: mod.rs  user_routes.rs  users.rs
app/src/entities/: mod.rs  prelude.rs  routes.rs  user_passengers.rs  user_routes.rs
app/tests/: api_impl_tests.rs  api_integration.rs  api_server_functions.rs  entity_tests.rs  error_tests.rs  integration_test.rs  notifier_integration.rs  notifier_tests.rs  scraper_integration.rs  scraper_retry_tests.rs  seed_integration.rs
app/tests/fixtures/: routes_response.xml  schedules.html  stations_response.xml
frontend/: Cargo.toml
frontend/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251014_045535_create_user_routes.rs  m20251014_045537_create_user_passengers.rs  m20251014_045538_create_route_states.rs  m20251014_045540_create_stations.rs  m20251014_054404_create_routes_catalog.rs  m20251014_060000_alter_stations_add_columns.rs  m20251212_000001_fix_route_id_types.rs  m20251212_000002_seed_routes_data.rs  m20251212_000003_drop_routes_stations_tables.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  tracker.rs  tracker_impl.rs
server/tests/: api_comprehensive.rs  api_e2e.rs  ssr_components.rs  ssr_test.rs  tracker_e2e.rs  tracker_integration.rs
src/: config.rs  db.rs  error.rs  html_parser.rs  lib.rs  main.rs  notifier.rs  repositories.rs  scraper.rs  seed.rs  seed_routes.rs  types.rs
src/entities/: prelude.rs  route_states.rs  stations.rs  users.rs
style/: main.css  output.css
tests/: integration_test.rs
tests/e2e/playwright/: playwright.config.ts  routes.spec.ts  users.spec.ts
