[package]
name = "bus-availabilities-scaper"
version = "0.1.0"
edition = "2021"

[lib]
name = "bus_availabilities_scaper"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.36"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.20"
regex = "1.10"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
migration = { path = "migration" }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
once_cell = "1.19"

[dev-dependencies]
wiremock = "0.5"

[lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
