[workspace]
members = ["app", "server", "frontend", "migration"]
resolver = "2"

[workspace.dependencies]
# Leptos
leptos = { version = "0.8" }
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_axum = "0.8"

# Web framework
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# WASM
wasm-bindgen = "0.2"
console_log = "1.0"
console_error_panic_hook = "0.1"
log = "0.4"
web-sys = "0.3"

# Async
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["cookies", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
migration = { path = "migration" }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.19"

# Parsing
quick-xml = "0.36"
scraper = "0.20"
regex = "1.10"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev
wiremock = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
# Disabled for Leptos components and pragmatism
must_use_candidate = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
unused_self = "allow"
bool_to_int_with_if = "allow"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[[workspace.metadata.leptos]]
name = "bus-scraper"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
tailwind-input-file = "style/main.css"
tailwind-config-file = "tailwind.config.js"
output-name = "frontend"
bin-features = []
lib-features = ["hydrate"]
