[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["hydrate"]
hydrate = ["app/hydrate", "leptos/hydrate"]

[dependencies]
app = { path = "../app" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
web-sys.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true
